--- a/css/itheritance.css
+++ b/css/itheritance.css
@@ -1,10 +1,10 @@
 body {
-    font-family:'Courier New', Courier, monospace
-    color: #665544;
-    padding: 10%;
-}
+    font-family:'Courier New', Courier, monospace;
+    color: #12f1db;
+    padding: 10%; }
 .page {
-    border: 1px solid #665544;
-    background-color: teal;
-    padding: inherit;
-} 
+        border: 1px solid #0a84ca;
+
+        background-color: #666666;
+        padding: inherit;
+    }
